// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorTranslator shades and tints tests Shades tests from "hsl(0 100% 50% / 1)" with decimals 1`] = `
[
  "hsl(0 100% 42% / 1)",
  "hsl(0 100% 33% / 1)",
  "hsl(0 100% 25% / 1)",
  "hsl(0 100% 17% / 1)",
  "hsl(0 100% 8% / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from "hsl(0 100% 50%)" with decimals 1`] = `
[
  "hsl(0 100% 42%)",
  "hsl(0 100% 33%)",
  "hsl(0 100% 25%)",
  "hsl(0 100% 17%)",
  "hsl(0 100% 8%)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from "rgb(255 0 0 / 1)" with decimals 1`] = `
[
  "rgb(213 0 0 / 1)",
  "rgb(170 0 0 / 1)",
  "rgb(128 0 0 / 1)",
  "rgb(85 0 0 / 1)",
  "rgb(43 0 0 / 1)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from "rgb(255 0 0)" with decimals 1`] = `
[
  "rgb(213 0 0)",
  "rgb(170 0 0)",
  "rgb(128 0 0)",
  "rgb(85 0 0)",
  "rgb(43 0 0)",
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"H":0,"S":100,"L":50,"A":1} with decimals 1`] = `
[
  {
    "A": 1,
    "H": 0,
    "L": 42,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 33,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 25,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 17,
    "S": 100,
  },
  {
    "A": 1,
    "H": 0,
    "L": 8,
    "S": 100,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"H":0,"S":100,"L":50} with decimals 1`] = `
[
  {
    "H": 0,
    "L": 42,
    "S": 100,
  },
  {
    "H": 0,
    "L": 33,
    "S": 100,
  },
  {
    "H": 0,
    "L": 25,
    "S": 100,
  },
  {
    "H": 0,
    "L": 17,
    "S": 100,
  },
  {
    "H": 0,
    "L": 8,
    "S": 100,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"R":255,"G":0,"B":0,"A":1} with decimals 1`] = `
[
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 213,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 170,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 128,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 85,
  },
  {
    "A": 1,
    "B": 0,
    "G": 0,
    "R": 43,
  },
]
`;

exports[`ColorTranslator shades and tints tests Shades tests from {"R":255,"G":0,"B":0} with decimals 1`] = `
[
  {
    "B": 0,
    "G": 0,
    "R": 213,
  },
  {
    "B": 0,
    "G": 0,
    "R": 170,
  },
  {
    "B": 0,
    "G": 0,
    "R": 128,
  },
  {
    "B": 0,
    "G": 0,
    "R": 85,
  },
  {
    "B": 0,
    "G": 0,
    "R": 43,
  },
]
`;
